# workspaces3

./: .env.example  .gitignore  IMPLEMENTATION_LOG.md  Makefile  QUICKSTART.md  README.md  demo.py  launch_replay.py  launch_ui.py  pyproject.toml
tests/: test_end_to_end.py  test_filesystem_tool.py
ui_workspaces/20251119_234741/: events.jsonl
workspaces3/: __init__.py  orchestrator.py
workspaces3/agent/: __init__.py  loop.py  planner.py  synthesizer.py
workspaces3/memory/: __init__.py  event_stream.py
workspaces3/sandbox/: __init__.py  python_executor.py
workspaces3/tools/: __init__.py  base.py  browser.py  codeact.py  filesystem.py  web_search.py
workspaces3/ui/: app.py  replay.py
